--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
             </div>
             
             <div class="form-group">
-                <label for="Jersey Number">Jersey Number of first TD scorer?</label>
-                <select id="PlayerPass" name="PlayerPass">
+                <label for="JerseyNumber">Jersey Number of first TD scorer?</label>
+                <select id="JerseyNumber" name="PlayerPass">
                     <option value="Over 10.5">Over 10.5</option>
                     <option value="Under 10.5">Under 10.5</option>
                 </select>
@@ -389,4 +389,5 @@
         });
     </script>
 </body>
+
 </html>
