--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             
             <div class="form-group">
                 <label for="JerseyNumber">Jersey Number of first TD scorer?</label>
-                <select id="JerseyNumber" name="PlayerPass">
+                <select id="JerseyNumber" name="JerseyNumber">
                     <option value="Over 10.5">Over 10.5</option>
                     <option value="Under 10.5">Under 10.5</option>
                 </select>
@@ -171,7 +171,7 @@
             
             <div class="form-group">
                 <label for="CharliePuth">What will the dominant color of Charlie Puth's outfit be during the anthem?</label>
-                <select id="batiste" name="batiste">
+                <select id="CharliePuth" name="CharliePuth">
                     <option value="Red">Red</option>
                     <option value="Black">Black</option>
                     <option value="White">White</option>
@@ -391,3 +391,4 @@
 </body>
 
 </html>
+
