--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
                     <option value="MONACO">MONACO</option>
                     <option value="ALAMBRE PuA">ALAMBRE PuA</option>
                     <option value="LA MuDANZA">La MuDANZA</option>
-		    <option value="NUEVAYoL">NUEVAYoL</option>
-		    <option value="Chambea">Chambea</option>
+		            <option value="NUEVAYoL">NUEVAYoL</option>
+		            <option value="Chambea">Chambea</option>
                     <option value="Other">Other</option>
                 </select>
             </div>
@@ -305,8 +305,8 @@
             <div class="loading" id="loadingMessage">
                 Submitting your entry...
             </div>
-            <p id="emailError" class="error-message">This email has already been used to RSVP.</p>
-            <button type="submit" id="submitButton">Submit RSVP</button>
+            <p id="emailError" class="error-message">This email has already been used to enter.</p>
+            <button type="submit" id="submitButton">Submit Entry</button>
         </form>
         
         <div id="successScreen" class="success-screen">
@@ -391,4 +391,5 @@
 </body>
 
 </html>
+
 
