--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Super Bowl Party RSVP</title>
+    <title>Big Game Party Form</title>
     <style>
         body {
             background-color: black;
@@ -391,5 +391,6 @@
 </body>
 
 </html>
+
 
 
