--- a/index.html
+++ b/index.html
@@ -350,6 +350,10 @@
                 // Get all form data
                 const formData = new FormData(this);
                 const formProps = Object.fromEntries(formData);
+
+				console.log("BadBunnyFit:", formProps.BadBunnyFit);
+                console.log("BadBunnySong:", formProps.BadBunnySong);
+                console.log("All keys:", Object.keys(formProps));
                 
                 // Generate random number 1-4
                 const randomNum = Math.floor(Math.random() * 4) + 1;
@@ -391,6 +395,7 @@
 </body>
 
 </html>
+
 
 
 
