--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
             </div>
             
             <div class="form-group">
-                <label for="BadBunnyFit">What will the dominant color of Bad Bunny's starting outfit for the halftime show be?</label>
-                <select id="BadBunnyFit" name="BadBunnyFit">
+                <label for="KendrickFit">What will the dominant color of Bad Bunny's starting outfit for the halftime show be?</label>
+                <select id="KendrickFit" name="KendrickFit">
                     <option value="Red">Red</option>
                     <option value="Black">Black</option>
                     <option value="White">White</option>
@@ -395,6 +395,7 @@
 </body>
 
 </html>
+
 
 
 
